# korrektor-py

./: 404.html  README.md  index.html  mkdocs.yml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  deploy_docs.yml
docs/: index.md  objects.md  quickstart.md  testing.md
docs/methods/: alphabet_sorting.md  auto_correct.md  doc.md  number_to_words.md  ocr.md  remove_duplicates.md  remove_modifiers.md  spell_check.md  tokenize.md  transliterate.md  word_frequency.md
korrektor_py/: __init__.py  api.py  core.py  exceptions.py  models.py  schemas.py  utils.py
methods/alphabet_sorting/: index.html
methods/auto_correct/: index.html
methods/doc/: index.html
methods/number_to_words/: index.html
methods/ocr/: index.html
methods/remove_duplicates/: index.html
methods/remove_modifiers/: index.html
methods/spell_check/: index.html
methods/tokenize/: index.html
methods/transliterate/: index.html
methods/word_frequency/: index.html
objects/: index.html
quickstart/: index.html
search/: search_index.json
testing/: index.html
tests/: constants.py  test_korrektor_py.py
tests/assets/: example.docx
