[metadata]
name = korrektor-py
author = Abduaziz Ziyodov
author_email = abduaziz.ziyodov@mail.ru
url = https://github.com/AbduazizZiyodov/korrektor-py
description = Python wrapper for the https://korrektor.uz/api

long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

platform = any

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.8
packages = find:

setup_requires =
    setuptools
    wheel

install_requires =
    httpx
    pydantic
    pytest